--- a/vercel.json
+++ b/vercel.json
@@ -12,21 +12,17 @@
   ],
   "routes": [
     {
-      "src": "/assets/(.*)",
+      "src": "/assets/(.*\\.css)",
       "headers": {
-        "Content-Type": "application/javascript"
+        "Content-Type": "text/css",
+        "Cache-Control": "public, max-age=31536000, immutable"
       }
     },
     {
-      "src": "/(.*\\.js)",
+      "src": "/assets/(.*\\.js)",
       "headers": {
-        "Content-Type": "application/javascript"
-      }
-    },
-    {
-      "src": "/(.*\\.css)",
-      "headers": {
-        "Content-Type": "text/css"
+        "Content-Type": "application/javascript",
+        "Cache-Control": "public, max-age=31536000, immutable"
       }
     },
     {
